[build-system]
requires = ["setuptools >= 64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hxntools"
dynamic = ["version"]
description = "NSLS-II Hard X-ray Nanoprobe data acquisition tools"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Brookhaven National Laboratory", email = "DAMA@bnl.gov"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bluesky",
    "boltons",
    "cycler",
    "databroker",
    "h5py",
    "matplotlib",
    "nslsii",
    "numpy",
    "ophyd",
    "pandas",
    "pyepics",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/NSLS-II-HXN/hxntools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]